# mySnakeGame

./: .gitignore  CMakeLists.txt
resources/levels/: levels.txt
step01/: README.md  main.cpp
step01/functionHandler/engineHandler/: draw.cpp  fruitFunction.cpp  input.cpp  update.cpp
step01/headers/: engine.hpp
step01/src/: engine.cpp  fruit.cpp  snake.cpp
step02/: README.md
step02/functionHandler/engineHandler/: cameraHandler.cpp  draw.cpp  fruitFunction.cpp  input.cpp  levelHandler.cpp  snakeFunction.cpp  update.cpp
step02/headers/: engine.hpp  snake.hpp  wall.hpp
step02/src/: engine.cpp  wall.cpp
step03/: README.md
step03/functionHandler/engineHandler/: cameraHandler.cpp  draw.cpp  fruitFunction.cpp  input.cpp  levelHandler.cpp  textHandler.cpp  update.cpp
step03/headers/: engine.hpp  fruit.hpp  wall.hpp
step03/src/: engine.cpp  fruit.cpp  wall.cpp
step04/: README.md
step04/functionHandler/engineHandler/: cameraHandler.cpp  directionArrowHandler.cpp  draw.cpp  fruitHandler.cpp  input.cpp  levelHandler.cpp  textHandler.cpp  togglePauseHandler.cpp  update.cpp
step04/headers/: engine.hpp
step04/src/: engine.cpp  fruit.cpp  main.cpp
step05/: README.md
step05/functionHandler/engineHandler/: cameraHandler.cpp  directionArrowHandler.cpp  fruitHandler.cpp  input.cpp  levelHandler.cpp  textHandler.cpp
step05/headers/: engine.hpp
step05/src/: engine.cpp  fruit.cpp  wall.cpp
step06/: README.md
step06/functionHandler/engineHandler/: cameraHandler.cpp  directionArrowHandler.cpp  draw.cpp  fruitHandler.cpp  input.cpp  levelHandler.cpp  snakeHandler.cpp  textHandler.cpp  update.cpp
step06/headers/: enemy.hpp  engine.hpp  pathfinding.hpp  snake.hpp  wall.hpp
step06/src/: enemy.cpp  engine.cpp  fruit.cpp  pathfinding.cpp  snake.cpp  wall.cpp
step07/functionHandler/engineHandler/: cameraHandler.cpp  levelHandler.cpp  snakeHandler.cpp  update.cpp
step07/headers/: enemy.hpp  fruit.hpp  snake.hpp
step07/src/: enemy.cpp  engine.cpp  pathfinding.cpp  snake.cpp  wall.cpp
